# DualDomain

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
scripts/: update-deps
src/: CMakeLists.txt  MixedForm.cpp  MixedForm.hpp  main.cpp
src/MixedForm/: MixedForm.cpp  MixedForm.hpp
src/WixedForm/: WixedForm.cpp  WixedForm.hpp
test/: CMakeLists.txt  test_mixed_binop.cpp  test_mixed_comparison.cpp  test_mixed_misc.cpp  test_mixed_scalar.cpp  test_mixed_serialization.cpp  test_mixed_unop.cpp  test_wixed_binop.cpp  test_wixed_scalar.cpp  test_wixed_serialization.cpp  test_wixed_unop.cpp
